--- a/templates/_header.html
+++ b/templates/_header.html
@@ -3,8 +3,8 @@
 <div class="container-fluid  topper">
     <div class="row">
         <div class="col-md-12 image-header">
-            <img src="{{ url_for('static', filename='images/logo.png') }}"
-                 alt="Database for Polyphenol Utilized Proteins from gut microbiota" style="height:100px">
+            <img alt="Database for Polyphenol Utilized Proteins from gut microbiota"
+                 src="{{ url_for('static', filename='images/logo.png') }}" style="height:100px">
         </div>
     </div>
 
