--- a/templates/410.html
+++ b/templates/410.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Data not found | 410</title>
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:700,900" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='styles/404.css') }}"/>
-    <meta name="robots" content="noindex">
+    <link href="{{ url_for('static', filename='styles/404.css') }}" rel="stylesheet" type="text/css"/>
+    <meta content="noindex" name="robots">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
