--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,13 +1,13 @@
 <hr>
-<script type="text/javascript" id="clustrmaps"
-        src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=m&d=iwhKWTOVgFP564eraF0AzAWv2afw2jYd3RVJkibR4A8&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
+<script id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=m&d=iwhKWTOVgFP564eraF0AzAWv2afw2jYd3RVJkibR4A8&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff"
+        type="text/javascript"></script>
 <div class="row">
     <div class="col-lg-12">
         <p class="text-center" style="text-align: center">
         <span style="color: #999999;font-size: 12px;">Copyright © {{ now.year }}
-          <a style="color: #999999;font-size: 12px;" href="https://www.unl.edu">University of Nebraska-Lincoln</a> | <a
-                    style="color: #999999;font-size: 12px;"
-                    href="http://bcb.unl.edu/">Dr. Yin's Lab at UNL</a></span><br>
+          <a href="https://www.unl.edu" style="color: #999999;font-size: 12px;">University of Nebraska-Lincoln</a> | <a
+                    href="http://bcb.unl.edu/"
+                    style="color: #999999;font-size: 12px;">Dr. Yin's Lab at UNL</a></span><br>
             <a style="color: #999999;font-size: 12px;">Handcoded by Pengxiang Zhang &amp; Yinchao He.</a>
         </p>
     </div>
