--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -3,16 +3,16 @@
 
         <!-- BRAND -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#alignment-example" aria-expanded="false">
+            <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#alignment-example"
+                    data-toggle="collapse" type="button">
                 <span class="sr-only">Toggle navigatsion</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <a href="https://www.unl.edu">
-                <img alt="Brand" src="{{ url_for('static', filename='images/unl.svg') }}"
-                     class="navbar-brand"></a>
+                <img alt="Brand" class="navbar-brand"
+                     src="{{ url_for('static', filename='images/unl.svg') }}"></a>
             <a class="navbar-brand" href="{{ url_for('index') }}">{{ config['title'] }}</a>
         </div>
 
@@ -22,9 +22,9 @@
             <!-- Links -->
             <ul class="nav navbar-nav">
                 <li class="dropdown">
-                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Class <span class="caret"></span></a>
-                    <ul class="dropdown-menu" aria-labelledby="about-us">
+                    <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown" href=""
+                       role="button">Class <span class="caret"></span></a>
+                    <ul aria-labelledby="about-us" class="dropdown-menu">
                         <li><a href="{{ url_for('classes', class_id = 'ORs') }}">ORs</a></li>
                         <li><a href="{{ url_for('classes', class_id = 'FRs') }}">FRs</a></li>
                         <li><a href="{{ url_for('classes', class_id = 'HRs') }}">HRs</a></li>
@@ -52,9 +52,9 @@
                 </li>
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false">Taxonomy <span class="caret"></span></a>
-                        <ul class="dropdown-menu" aria-labelledby="about-us">
+                        <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown" href=""
+                           role="button">Taxonomy <span class="caret"></span></a>
+                        <ul aria-labelledby="about-us" class="dropdown-menu">
                             <li><a href="{{ url_for('taxonomy_family', family_id = 'UHGP') }}">Homologs from UHGP</a>
                             </li>
                             <li><a href="{{ url_for('taxonomy_family', family_id = 'UniProt') }}">Homologs from
